Redesigned the dependency handling by allowing node to take care of it (module caching). Create catch all 404 page (for now). Moved a lot of plumbing into a new common.js file.

--- a/app/config.json
+++ b/app/config.json
@@ -5,9 +5,9 @@
 		"languages": "lang"
 	},
 	"app": {
-		"name": "Colin.is",
+		"name": "Johannes",
 		"port": 5982,
-		"db": "colin-is",
+		"db": "johannes",
 		"viewengine": "ejs"
 	},
 	"language": {
