Started work on the admin/setup areas. Trying to work through to the point where I can setup up the database through the app itself. * Added more content to the language file * Moved the Johannes intro into johannes.ejs and changed the url * Added support for Eco templates

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "ejs": ">=0.2.1",
     "everyauth": ">=0.2.3",
     "markdown": "=0.1.8",
-    "cradle": ">=0.1.7"
+    "cradle": ">=0.1.7",
+	"eco": ">=1.1.0"
   },
   "devDependencies": {
   },
