More work done on the setup process. * Created a generic client-side form handler (which needs work) * Created a site info form partial to allow for updating the site info during setup * Removed the language object from the config object to make saving of the config easier. Probably should have the site info in the db, which should be setup first.

--- a/app/config.json
+++ b/app/config.json
@@ -1,16 +1,1 @@
-{
-	"folders": {
-		"views": "views",
-		"staticFiles": "public",
-		"languages": "lang"
-	},
-	"app": {
-		"name": "Johannes",
-		"port": 5982,
-		"db": "johannes",
-		"viewengine": "ejs"
-	},
-	"language": {
-		"code": "en"
-	}
-}
+{"folders":{"views":"views","staticFiles":"public","languages":"lang"},"app":{"name":"Johannes","port":5982,"db":"johannes","viewengine":"ejs"},"language":{"code":"en"}}
