--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "johannes",
   "description": "Simple content management system for node.js",
-  "version": "0.1",
+  "version": "0.1.0",
   "homepage": "https://hg.cbate.com/Johannes/",
   "repository": {
     "type": "mercurial",
@@ -28,9 +28,9 @@
     "express": ">=0.9.0",
     "ejs": ">=0.2.1",
     "everyauth": ">=0.2.3",
-    "markdown": "=0.1.8",
+    "markdown": ">=0.1.8",
     "cradle": ">=0.1.7",
-	"eco": ">=1.1.0"
+	"eco": ">=1.0.3"
   },
   "devDependencies": {
   },
